service.yaml
---
### Service ###
apiVersion: v1
kind: Service
metadata:
  name: springapp-service
  namespace: default
spec:
  selector:
    app: springapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
